--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </body>
     <style>
         .heading {
-            color:#000000;
+            color:#0e95e2;
             font-size: 100px;
         }
         .genshinimage {
