--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
     
     <div>
-        <img src = "https://static.wikia.nocookie.net/gensin-impact/images/d/d4/Item_Primogem.png/revision/latest/top-crop/width/360/height/360?cb=20201117071158" width="200px" height = "200px" />
+        <img src = "https://static.wikia.nocookie.net/gensin-impact/images/d/d4/Item_Primogem.png/revision/latest/top-crop/width/360/height/360?cb=20201117071158" width="200px" height = "200px"></img>
     </div>
     </html>
 
