--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-size: 100px;
         }
         .genshinimage {
-            background: url("https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/angeru64/Np5RSaXo-battle.gif");
+            background: url("https://wallpaperaccess.com/full/2505746.jpg");
         }
     </style>
     
