--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-size: 100px;
         }
         .genshinimage {
-            background: url("https://wallpaperaccess.com/full/2505746.jpg");
+            background: url("https://c.tenor.com/m-k-XrJUsDUAAAAd/kazuha-genshin-impact.gif");
         }
     </style>
     
