--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-size: 100px;
         }
         .genshinimage {
-            background: url("https://c.tenor.com/m-k-XrJUsDUAAAAd/kazuha-genshin-impact.gif");
+            background: url("https://64.media.tumblr.com/516f3710a61b3308fb8f3d10af140964/354b76423ca981fa-e9/s640x960/2b02df9291d320499554641b3199ddc2dc69e189.gif");
         }
     </style>
     
